[gd_scene load_steps=31 format=3 uid="uid://uy3d1h5c5xel"]

[ext_resource type="Script" path="res://scenes/characters/enemies/skeleton/skeleton_warrior/skeleton_warrior.gd" id="1_fh8n5"]
[ext_resource type="PackedScene" uid="uid://cfa3kum8dxcon" path="res://scenes/components/hurt_component.tscn" id="2_olr46"]
[ext_resource type="Shader" path="res://scenes/characters/enemies/goblins/goblin_barbarian.gdshader" id="3_vth66"]
[ext_resource type="Texture2D" uid="uid://bruobppbx52x1" path="res://assets/game/characters/Skeleton_Warrior.png" id="4_d2u7d"]
[ext_resource type="Script" path="res://scripts/state_machine/node_state_machine.gd" id="5_iulr0"]
[ext_resource type="Script" path="res://scenes/characters/npc_states/idle_state.gd" id="6_x0awh"]
[ext_resource type="Script" path="res://scenes/characters/npc_states/walk_state.gd" id="7_7gchv"]
[ext_resource type="Script" path="res://scenes/characters/npc_states/attack_state.gd" id="8_7us8c"]
[ext_resource type="PackedScene" uid="uid://7ovrta2wmxi4" path="res://scenes/ui/enemy_damage_bar.tscn" id="9_x6vlc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vnh7"]
size = Vector2(24, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0mkhr"]
shader = ExtResource("3_vth66")
shader_parameter/original_0 = Color(0.454902, 0.6, 0.419608, 1)
shader_parameter/original_1 = Color(0.345098, 0.521569, 0.356863, 1)
shader_parameter/replace_0 = Color(0.58138, 0.786982, 0.592458, 1)
shader_parameter/replace_1 = Color(0.421733, 0.618943, 0.434308, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wfa3"]
atlas = ExtResource("4_d2u7d")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o7rp"]
atlas = ExtResource("4_d2u7d")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c8aw"]
atlas = ExtResource("4_d2u7d")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba44a"]
atlas = ExtResource("4_d2u7d")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2y3n"]
atlas = ExtResource("4_d2u7d")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lc58"]
atlas = ExtResource("4_d2u7d")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptq0n"]
atlas = ExtResource("4_d2u7d")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxne7"]
atlas = ExtResource("4_d2u7d")
region = Rect2(96, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko4tr"]
atlas = ExtResource("4_d2u7d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt07k"]
atlas = ExtResource("4_d2u7d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xq36"]
atlas = ExtResource("4_d2u7d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bb2k"]
atlas = ExtResource("4_d2u7d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhhn5"]
atlas = ExtResource("4_d2u7d")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi2gt"]
atlas = ExtResource("4_d2u7d")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_af8i8"]
atlas = ExtResource("4_d2u7d")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lalut"]
atlas = ExtResource("4_d2u7d")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0twun"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wfa3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o7rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c8aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba44a")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2y3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lc58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptq0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxne7")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko4tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt07k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xq36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bb2k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhhn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi2gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af8i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lalut")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3r12b"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh18b"]
size = Vector2(24, 24)

[node name="SkeletonWarrior" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 65
collision_mask = 9
script = ExtResource("1_fh8n5")

[node name="HurtComponent" parent="." instance=ExtResource("2_olr46")]
tool = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_3vnh7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_0mkhr")
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_0twun")
animation = &"walk"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_3r12b")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("5_iulr0")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite_2d")]
script = ExtResource("6_x0awh")
character = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite_2d", "navigation_agent_2d")]
script = ExtResource("7_7gchv")
character = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
navigation_agent_2d = NodePath("../../NavigationAgent2D")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "animated_sprite_2d")]
script = ExtResource("8_7us8c")
character = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
navigation_layers = 8
path_postprocessing = 1
avoidance_enabled = true
radius = 5.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_fh18b")

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageBar" parent="." instance=ExtResource("9_x6vlc")]
